--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.0.2"
 coroutinesVersion = "1.8.0"
 dateTimeVersion = "0.5.0"
-kotlin = "1.8.21"
+kotlin = "1.9.0"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -10,14 +10,12 @@ espresso-core = "3.5.1"
 appcompat = "1.6.1"
 ktorVersion = "2.3.8"
 material = "1.11.0"
-#sqlDelightVersion = "1.5.5"
 serializationPlugin = "1.9.22"
-sqlDelightPlugin = "2.0.1"
-jvmDriverVersion = "2.0.1"
+sqlDelightVersion = "2.0.1"
 
 [libraries]
-#android-driver = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
-jvm-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "jvmDriverVersion" }
+android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
+jvm-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelightVersion" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
@@ -39,7 +37,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 serializationPlugin = { id = "plugin.serialization", version.ref = "serializationPlugin" }
-sqlDelightPlugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelightPlugin" }
+sqlDelightPlugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelightVersion" }
 
 [bundles]
 
