--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-agp = "8.0.2"
+#agp = "8.0.2"
 coroutinesVersion = "1.8.0"
 dateTimeVersion = "0.5.0"
-kotlin = "1.9.0"
+#kotlin = "1.9.0"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -34,10 +34,10 @@ material = { group = "com.google.android.material", name = "material", version.r
 
 
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "agp" }
-kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-serializationPlugin = { id = "plugin.serialization", version.ref = "serializationPlugin" }
-sqlDelightPlugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelightVersion" }
+#androidApplication = { id = "com.android.application", version.ref = "agp" }
+#kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+#serializationPlugin = { id = "plugin.serialization", version.ref = "serializationPlugin" }
+#sqlDelightPlugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelightVersion" }
 
 [bundles]
 
