--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ ktorVersion = "2.3.8"
 material = "1.11.0"
 serializationPlugin = "1.9.22"
 sqlDelightVersion = "2.0.1"
+ksp = "2.0.20-1.0.24"
+kotlinInject = '0.7.2'
 
 [libraries]
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
@@ -31,6 +33,8 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 #native-driver = { module = "com.squareup.sqldelight:native-driver", version.ref = "sqlDelightVersion" }
 #runtime = { module = "com.squareup.sqldelight:runtime", version.ref = "sqlDelightVersion" }
+kotlinInject-compiler = { module = 'me.tatarka.inject:kotlin-inject-compiler-ksp', version.ref = 'kotlinInject' }
+kotlinInject-runtime = { module = 'me.tatarka.inject:kotlin-inject-runtime-kmp', version.ref = 'kotlinInject' }
 
 
 [plugins]
@@ -38,6 +42,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 #kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 #serializationPlugin = { id = "plugin.serialization", version.ref = "serializationPlugin" }
 #sqlDelightPlugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelightVersion" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 [bundles]
 
