--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-#agp = "8.0.2"
+agp = "8.4.0"
+kotlin = "2.1.10"
 coroutinesVersion = "1.8.0"
 dateTimeVersion = "0.5.0"
-#kotlin = "1.9.0"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -10,7 +10,7 @@ espresso-core = "3.5.1"
 appcompat = "1.6.1"
 ktorVersion = "2.3.8"
 material = "1.11.0"
-serializationPlugin = "1.9.22"
+#serializationPlugin = "1.9.22"
 sqlDelightVersion = "2.0.1"
 
 [libraries]
@@ -34,10 +34,13 @@ material = { group = "com.google.android.material", name = "material", version.r
 
 
 [plugins]
+android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+sqlDelight = { id = "app.cash.sqldelight", version.ref = "sqlDelightVersion" }
+
+#kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 #androidApplication = { id = "com.android.application", version.ref = "agp" }
-#kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-#serializationPlugin = { id = "plugin.serialization", version.ref = "serializationPlugin" }
-#sqlDelightPlugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelightVersion" }
 
 [bundles]
 
